# LLAMA-HACKATHON

./: LICENSE  README.md  requirements.txt
backend/: add_to_rag.py  courses_full.json  cv_analysis.json  dashboard.py  githubreal.py  main.py  ollama_chat4.py  ollamachat2.py  ollamachat3.py  pyproject.toml  users.csv
backend/chat_stage/: chat_stage.py  rag_stage.py
backend/chroma_db/: chroma.sqlite3
backend/cv_mechanism/: converter.py  main_converter.py
backend/routers/: chat_routers.py  cv_router.py  github_router.py
chroma_db/: chroma.sqlite3
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: CVScore.tsx  CareerTodoList.tsx  ChatAssistant.tsx  GitHubProfile.tsx  GithubRepo.tsx  Header.tsx  Sidebar.tsx  WelcomeScreen.tsx  import React, { useState, useEffect } fr.tsx  utils.ts
