[project]
name = "mate-antrainment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.11.0",
    "bitsandbytes>=0.48.1",
    "fastapi>=0.120.0",
    "fastmcp>=2.12.5",
    "langchain>=1.0.2",
    "langchain-community>=0.4",
    "langchain-mcp-adapters>=0.1.11",
    "langchain-ollama>=1.0.0",
    "llama-index>=0.14.5",
    "ollama>=0.6.0",
    "peft>=0.17.1",
    "pydantic>=2.12.3",
    "reportlab>=4.4.4",
    "selenium>=4.38.0",
    "trl>=0.23.0",
    "unsloth>=2025.10.9",
]
